@@ -17,12 +17,13 @@
 package de.gematik.prepare.pooling.strategies;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CaseInsensitiveExactStrategy extends MatchStrategy {
 
   public CaseInsensitiveExactStrategy(List<String> groups) {
 
-    super(groups.stream().map(String::toLowerCase).toList());
+    super(groups.stream().map(String::toLowerCase).collect(Collectors.toList()));
   }
 
   @Override
